Fix fraction vertical align

--- a/app/src/main/assets/math_text_view/css/math_text_view.css
+++ b/app/src/main/assets/math_text_view/css/math_text_view.css
@@ -130,7 +130,7 @@ svg {
 
 .fraction {
   text-align: center;
-  vertical-align: 1ex;
+  vertical-align: 1.015ex;
   margin-left: 0.7ex;
   margin-right: 0.7ex;
 }
